no local entries found localization

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -123,6 +123,7 @@
     "declarationStatusFinalized": "δηλωμένη",
     "declarationStatusTemporary": "προσωρινή",
     "declarationStatusUndeclared": "αδήλωτη",
+    "itemsNotFoundLocally": "δεν βρέθηκαν τοπικές εγγραφές",
     "unusedForNonTrailingComma________________________________":""
 
 
