added serialNumber localization and moved declarationStatusDot inside the container ( in column )

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -124,6 +124,8 @@
     "declarationStatusTemporary": "προσωρινή",
     "declarationStatusUndeclared": "αδήλωτη",
     "itemsNotFoundLocally": "δεν βρέθηκαν τοπικές εγγραφές",
+    "serialNumber": "αριθμός αναγνώρισης",
+    "serialNumberShort": "Α/Α",
     "unusedForNonTrailingComma________________________________":""
 
 
