added localization: declarationDate

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -126,6 +126,7 @@
     "itemsNotFoundLocally": "δεν βρέθηκαν τοπικές εγγραφές",
     "serialNumber": "αριθμός αναγνώρισης",
     "serialNumberShort": "Α/Α",
+    "declarationDate": "ημερομηνία δήλωσης",
     "unusedForNonTrailingComma________________________________":""
 
 
