--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -126,6 +126,7 @@
     "itemsNotFoundLocally": "no local entries found",
     "serialNumber": "serial number",
     "serialNumberShort": "S/R",
+    "declarationDate": "declaration date",
     "unusedForNonTrailingComma________________________________":""
 
 
