--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -134,6 +134,7 @@
     "deleteDeclarationFromLocal": "διαγραφή της δήλωσης από την τοπική βάση",
     "deleteDeclarationDialogHeadline": "διαγραφή δήλωσης",
     "declarationDelataionDialogBody": "Αυτή η ενέργεια θα διαγράψει την δήλωση ΜΟΝΟ από την τοπική βάση της εφαρμογής",
+    "missingPropertyDetails": "λείπουν στοιχεία ακινήτου",
     "unusedForNonTrailingComma________________________________":""
 
 
