added link to the amended declaration

--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -124,6 +124,7 @@
     "declarationStatusTemporary": "temporary",
     "declarationStatusUndeclared": "undeclared",
     "itemsNotFoundLocally": "no local entries found",
+    "itemNotFoundLocally": "no local entry found",
     "serialNumber": "serial number",
     "serialNumberShort": "S/R",
     "declarationDate": "declaration date",
