--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -141,6 +141,7 @@
     "friendlyName":"φιλικό όνομα",
     "removeFriendlyName": "αφαίρεση φιλικού ονόματος",
     "noFriendlyNameToDelete": "δεν υπάρχει φιλικό όνομα για διαγραφή",
+    "anotherOperationIsProcessing": "αυτήν την στιγμή εκτελείται μια άλλη διαδικασία",
     "unusedForNonTrailingComma________________________________":""
 
 
