--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -158,6 +158,7 @@
     "deleting": "deleting",
     "view": "view",
     "noValidDeclarationFound": "no valid declaration was found ( propably was deleted )",
+    "declarationWasUpdated": "declaration has been updated",
     "unusedForNonTrailingComma________________________________":""
 
 
