added localizations: clear, finalize disclaimers, no pending declarations

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -161,6 +161,10 @@
     "declarationWasUpdated": "η δήλωση έχει ενημερωθεί",
     "noChangesDetected": "δεν βρέθηκαν αλλαγές",
     "temporaryDeclarations": "προσωρινές δηλώσεις",
+    "finalizeDeclaration": "οριστικοποίηση δήλωσης",
+    "finalizeDisclaimer": "Πρόκειται να καταθέσετε οριστικά την τρέχουσα προσωρινή δήλωση. Χρησιμοποιήστε αυτήν τη λειτουργία με δική σας ευθύνη. Ο προγραμματιστής του λογισμικού δεν φέρει καμία ευθύνη για πιθανά σφάλματα ή απώλειες",
+    "clear": "εκκαθάριση", 
+    "noPendingOperations" :"δεν αναμένονται διαδικασίες",
     "unusedForNonTrailingComma________________________________":""
 
 
