added localization: "cancellingFinalization"

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -158,13 +158,14 @@
     "deleting": "γίνεται διαγραφή",
     "view": "προβολή",
     "noValidDeclarationFound": "δεν βρέθηκε κάποια έγκυρη δήλωση ( ίσως έχει διαγραφεί )",
-    "declarationWasUpdated": "η δήλωση έχει ενημερωθεί",
+    "declarationWasUpdated": "έχει γίνει ενημέρωση της δήλωσης",
     "noChangesDetected": "δεν βρέθηκαν αλλαγές",
     "temporaryDeclarations": "προσωρινές δηλώσεις",
     "finalizeDeclaration": "οριστικοποίηση δήλωσης",
     "finalizeDisclaimer": "Πρόκειται να καταθέσετε οριστικά την τρέχουσα προσωρινή δήλωση. Χρησιμοποιήστε αυτήν τη λειτουργία με δική σας ευθύνη. Ο προγραμματιστής του λογισμικού δεν φέρει καμία ευθύνη για πιθανά σφάλματα ή απώλειες",
     "clear": "εκκαθάριση", 
     "noPendingOperations" :"δεν αναμένονται διαδικασίες",
+    "cancellingFinalization" : "ακύρωση οριστικοποίησης",
     "unusedForNonTrailingComma________________________________":""
 
 
