added an app disclaimer that only appears the first time openinig the app. ALSO its settings controller functions and its localizations

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -1,6 +1,6 @@
 {
     "@@locale": "el",
-    "localeFlag": "🇬🇷",
+    "localeFlag": "🇺🇸",
     "@homeScreen":{},
     "reservations": "κρατήσεις",
     "declarations": "δηλώσεις",
@@ -172,6 +172,9 @@
     "clearAllData" :"εκκαθάριση όλων των δεδομένων",
     "selectLanguage":"επιλογή γλώσσας",
     "appSettings" : "ρυθμίσεις εφαρμογής",
+    "disclaimer": "αποποίηση ευθυνών",
+    "appDisclaimer":"Αυτή η εφαρμογή δεν έχει δοκιμαστεί αρκετά, πράγμα που σημαίνει ότι μπορεί να εμφανιστούν μη αναμενόμενες καταστάσεις.\nΌπως και να έχει, υπό κανονικές συνθήκες, πρέπει να κάνει ότι υπόσχεται, επιτυχώς.\nΠαρόλα αυτά μην ξεχνάτε, ότι χρησιμοποιήστε αυτήν τη λειτουργία με δική σας ευθύνη.\n\nΟ προγραμματιστής του λογισμικού δεν φέρει καμία ευθύνη για πιθανά σφάλματα ή απώλειες.",
+    "userUnderstands": "καταλαβαίνω",
     "unusedForNonTrailingComma________________________________":""
 
 
