--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -175,6 +175,7 @@
     "disclaimer": "αποποίηση ευθυνών",
     "appDisclaimer":"Αυτή η εφαρμογή δεν έχει δοκιμαστεί αρκετά, πράγμα που σημαίνει ότι μπορεί να εμφανιστούν μη αναμενόμενες καταστάσεις.\nΌπως και να έχει, υπό κανονικές συνθήκες, πρέπει να κάνει ότι υπόσχεται, επιτυχώς.\nΠαρόλα αυτά μην ξεχνάτε, ότι χρησιμοποιήστε αυτήν τη λειτουργία με δική σας ευθύνη.\n\nΟ προγραμματιστής του λογισμικού δεν φέρει καμία ευθύνη για πιθανά σφάλματα ή απώλειες.",
     "userUnderstands": "καταλαβαίνω",
+    "importReservations": "εισαγωγή κρατήσεων",
     "unusedForNonTrailingComma________________________________":""
 
 
