--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -177,6 +177,8 @@
     "userUnderstands": "i understand",
     "importReservations": "import reservations",
     "declarationDetails":"declaration details",
+    "fees": "fees",
+    "netValue" : "net value",
     "unusedForNonTrailingComma________________________________":""
 
 
