added some localizations related to the tax year pie ( grossValue, feeFactor )

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -179,6 +179,8 @@
     "declarationDetails":"στοιχεία δήλωσης",
     "fees": "φόροι",
     "netValue" : "καθαρό ποσό",
+    "grossValue": "μεικτό ποσό",
+    "feeFactor": "φορολογικός συντελεστής",
     "unusedForNonTrailingComma________________________________":""
 
 
