added a "platforms" localization

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -189,6 +189,7 @@
     "displayNightsPerMonth" : "εμφάνιση νυχτών ανά μήνα",
     "noData": "δεν υπάρχουν δεδομένα",
     "nightRateAverage" : "μέσος όρος νύχτας",
+    "platforms" : "πλατφόρμες",
     "unusedForNonTrailingComma________________________________":""
 
 
