--- a/lib/localization/en.arb
+++ b/lib/localization/en.arb
@@ -189,6 +189,7 @@
     "displayNightsPerMonth" : "display nights per month",
     "noData": "no data",
     "nightRateAverage" : "night rate average",
+    "platforms" : "platforms",
     "unusedForNonTrailingComma________________________________":""
 
 
