added relevant localizations for the fee calculation route

--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -199,6 +199,17 @@
     "previous": "προηγούμενο",
     "current": "τρέχων",
     "filledPercentage": "ποσοστό πληρότητας",
+    "yearlyIncome" : "ετήσια έσοδα",
+    "taxCalculation" :"υπολογισμός φόρων",
+    "taxCalculationSummary" : "Οι υπολογισμοί της προηγούμενης σελίδας λαμβάνουν υπόψιν μόνο τα δεδομένα που έχουν εισαχθεί στην εφαρμογή.\n\nΑν ξέρετε παρόλα αυτά το ετήσιο εισόδημα σας, μπορείτε να πάρετε μια ιδέα για την εικόνα των φόρων σας σε αυτήν την σελίδα.",
+    "net": "καθαρά",
+    "basedOnImports": "βασισμένοι στα εισαγμένα δεδομένα, αυτό σημαίνει",
+    "feeExampleString01" : "θα φορολογούσασταν",
+    "feeExampleString02" : "και θα είχατε",
+    "importedData" : "εισαγμένα δεδομένα",
+    "atleast" : "τουλάχιστον",
+    "forGross":"για τα",
+
     "unusedForNonTrailingComma________________________________":""
 
 
