--- a/lib/localization/el.arb
+++ b/lib/localization/el.arb
@@ -214,6 +214,7 @@
     "addPlace" : "προσθήκη μέρους",
     "addPlaceForReservations" :"προσθήκη νέου μέρους για αποθήκευση κρατήσεων",
     "placeName": "ονομασία μέρους",
+    "displayReservationsOf": "εμφάνιση κρατήσεων από",
 
     "unusedForNonTrailingComma________________________________":""
 
